# Musnad_OCR_Tool

./: .env(1).example  .gitignore  1234.ipynb  Dockerfile  Readme.md  app.py  config.py  docker-compose.yml  install_deps.ps1  pyproject.toml  run_production.py  test.py
api/: annotations.py  augment.py  exports.py  images.py  processing.py  projects.py  segmentation.py  synthetic.py  validate.py
models/: image.py  project.py
services/: augment.py  export_service.py  file_manager.py  image_processor.py  image_processor_backup.py  segment.py  synthetic.py  validate.py
static/css/: i18n.css  missing-regions.css  review.css  styles.css  zoom-rotation.css
static/js/: app.js  auto-flow.js  canvas-handler.js  i18n-dynamic.js  i18n.js  image-processor.js  musnad-keyboard.js  review-handler.js
templates/: index.html
